styles.css
body {
    width: 100vw;
    margin: 4%;
    font-family: sans-serif;
    flex-direction: column;
    justify-content: left;
    display: inline-block;
    line-height: 1.7em;
    overflow-x:hidden;
}

a{
    text-decoration: none;
    color: inherit;
    color:blueviolet;
}

a:hover{

    color: black;

}

button{
    padding-left: 24px;
    padding-right: 24px;
    padding-top:16px;
    padding-bottom:16px;
    border-width: 1px;
    border-color: black;
    background-color: transparent;
    color: black;
    font-size: 16px;
    border-radius: 4px;
}

button:hover{
    cursor: pointer;
    border-color: black;
    background-color: black;
    color: white;
    font-size: 16px;
    border-radius: 4px;
}


.grid-container {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 10px;
    width:80%;
}

.wide {
    grid-column: span 2; /* Occupies 2 columns */
}

.grid-item {
 
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: left;
    gap:10px;
    padding: 0%; /* Creates a square by setting height equal to width */
}

.grid-content{
  
    width: 100%;
}

.inner-grid-container {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 10px;
}

.inner-grid-item {
 
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    justify-content: left;
    padding: 0%; /* Creates a square by setting height equal to width */
}

/* Media queries for responsiveness */

@media (max-width: 1200px) {
    .grid-container {
        grid-template-columns: repeat(3, 1fr);
        gap:20px;
        width:95%;
    }
}

@media (max-width: 900px) {
    .grid-container {
        grid-template-columns: repeat(1, 1fr);
    }
    
    .grid-item {
        grid-column: span 2;
        gap:20px;
    }

    .wide {
        grid-column: span 1; /* Occupies 2 columns */
    }

    .grid-content{
        
    }
}

@media (max-width: 600px) {
    .grid-container {
        grid-template-columns: repeat(1, 1fr);
  
    }
    .wide {
        grid-column: span 1; /* Occupies 2 columns */
    }
}

